feat: make module users and update openapi, and also fix auth module(#4)
* update openapi

* done logic module users

* fix: module auth and users and also fix openapi
